# songUI

./: .gitignore  _github_songui.py  pre_commit.py  pyproject.toml  readme.md  songui.py  version.txt
.github/workflows/: python-publish.yml
