[project]
description = "SongUI: A TUI media controller"
readme = "README.md"
dynamic = ["version"]

dependencies = [
  "curses",
  "subprocess",
  "argparse",
  "time",
  "shutil",
]

authors = [
  {name = "usr_40476", email = "usr_40476@icloud.com"},
]
maintainers = [
  {name = "usr_40476", email = "usr_40476@icloud.com"},
]

[project.urls]
Homepage = "https://github.com/40476/songUI"
Documentation = "https://github.com/40476/songUI/blob/main/readme.md"
Repository = "https://github.com/40476/songUI.git"
Issues = "https://github.com/40476/songUI/issues"
